# bluetooth-switch

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
src/: agent.rs  cli.rs  config.rs  error.rs  main.rs  protocol.rs  ui.rs
src/backend/: macos.rs  mod.rs  windows.rs
