[package]
name = "bluetooth-switch"
version = "0.1.0"
edition = "2021"
description = "Cross-platform Bluetooth device handoff tool"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
eframe = "0.31"

[profile.release]
strip = true
lto = true
codegen-units = 1
